--- a/package.json
+++ b/package.json
@@ -40,18 +40,19 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.484.0",
-    "next": "15.2.4",
+    "next": "15.3.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "resend": "^4.2.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
+    "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -62,7 +63,7 @@
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.30.6",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
