--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
+    "recharts": "^3.1.0",
     "resend": "^4.2.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.1",
@@ -74,5 +75,8 @@
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react-is": "^19.1.0"
   }
 }
