--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
-    "recharts": "^3.1.0",
+    "recharts": "2.15.4",
     "resend": "^4.2.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.1",
